--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
+    "@storybook/addon-notes": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/preact": "^5.3.19",
     "@testing-library/jest-dom": "^5.9.0",
